cambio del color y adición del logo

--- a/blogpost.html
+++ b/blogpost.html
@@ -3,8 +3,19 @@
         <title> Post Platzi</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
-    Aprendiendo un poco de HTML para poder hacer la tarea de platzi en GitHub
-    
-
-
+    <body>
+        <div id?"container">
+            <div id="cabecera">
+                <img id="logo" src="Imágenes/dragon.png"/>
+                Hyperblog
+                <span id="tagline"> Tu blog de cabecera</span>
+            </div>
+            <div id="post">
+                <h1>Este es el título interesante del post</h1>
+                <p>Los blogs son la mejor forma de compartir información e ideas</p>
+                <p>Así que anímate a crear contenido en tu blog y formar una gran comunidad de personas con tus mismos intereses</p>
+                <p>Suscríbete y dale like</p>
+            </div>
+        </div>
+    </body>
 </html>
